# vgfx

./: .gitignore  CMakeLists.txt  DEPS  README.md  vendor.json
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/wrapper/: gradle-wrapper.properties
android/lib_vgfx/: CMakeLists.txt  build.gradle.kts
include/vgfx/: library.h
include/vgfx/core/: AlphaType.h  Bitmap.h  BlendMode.h  Canvas.h  Caps.h  Color.h  ColorFilter.h  ColorType.h  Data.h  EncodedFormat.h  Filter.h  Font.h  Image.h  ImageBuffer.h  ImageFilter.h  ImageGenerator.h  ImageInfo.h  MaskFilter.h  Matrix.h  Orientation.h  Paint.h  Path.h  PathFillType.h  PathType.h  Pixmap.h  Point.h  Rect.h  SamplingOptions.h  Shader.h  Shape.h  Size.h  Stroke.h  TextBlob.h  TileMode.h  Typeface.h  YUVColorSpace.h  YUVData.h
include/vgfx/gpu/: Backend.h  Caps.h  Context.h  Device.h  ImageOrigin.h  PixelFormat.h  Surface.h  SurfaceOptions.h  Window.h
include/vgfx/metal/: MtlTypes.h
include/vgfx/opengl/: GLDevice.h  GLTypes.h
include/vgfx/platform/: HardwareBuffer.h  NativeImage.h  Print.h
include/vgfx/utils/: BytesKey.h  Stream.h
src/: library.cpp
src/core/: AlphaType.cpp  Canvas.cpp  CanvasState.h  Color.cpp  Data.cpp  DataProvider.h  Font.cpp  Image.cpp  ImageDecoder.cpp  ImageDecoder.h  ImageInfo.cpp  Matrix.cpp  Paint.cpp  Path.cpp  PathRef.h  Point.cpp
src/gpu/: Backend.cpp  Backend.h  BitmaskOperators.h  Blend.cpp  Blend.h  Context.cpp  CoordTransform.cpp  CoordTransform.h  Device.cpp  DrawArgs.h  DrawingManager.cpp  DrawingManager.h  FragmentShaderBuilder.cpp  FragmentShaderBuilder.h  Gpu.cpp  Gpu.h  GpuBuffer.h  Pipeline.cpp  Pipeline.h  Program.h  ProgramBuilder.h  ProgramCache.cpp  ProgramCache.h  ProgramInfo.h  ProxyProvider.cpp  ProxyProvider.h  RenderContext.cpp  RenderContext.h  RenderPass.cpp  RenderPass.h  RenderTarget.h  Resource.cpp  Resource.h  ResourceCache.cpp  ResourceCache.h  ResourceHandle.cpp  ResourceHandle.h  ResourceKey.h  ResourceProvider.cpp  ResourceProvider.h  (+27 more)
src/gpu/ops/: DrawOp.cpp  DrawOp.h  Op.cpp  Op.h
src/gpu/processors/: AARectEffect.cpp  AARectEffect.h  EmptyXferProcessor.cpp  EmptyXferProcessor.h  FragmentProcessor.cpp  FragmentProcessor.h  GeometryProcessor.cpp  GeometryProcessor.h  Processor.h  XferProcessor.h
src/gpu/proxies/: GpuBufferProxy.cpp  GpuBufferProxy.h  (+7 more)
src/opengl/: GLContext.cpp  GLContext.h  GLDevice.cpp  GLInterface.cpp  GLInterface.h  GLProcGetter.h
src/utils/: Logger.h  PixelFormatUtil.cpp  PixelFormatUtil.h  Stream.cpp  UniqueID.cpp  UniqueID.h
(+34 files in other folders)
